[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lashtest"
description = "A Python library for writing expressive, readable API tests"
version = "0.3.0"
requires-python = ">=3.9"
authors = [
  {name = "Sid-Ali Hamdane", email = "hamdane.sidali@hotmail.com"}
]
maintainers = [
  {name = "Sid-Ali Hamdane", email = "hamdane.sidali@hotmail.com"}
]
readme = "README.md"
license = {file = "LICENCE"}

dependencies = [
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "jsonpath_ng>=1.8.0",
    "click>=8.3.0",
    "allure-pytest>=2.13.0",
    "pytest>=7.0.0",
    "certifi>=2022.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/sidalihmdn/lashtest"

[project.scripts]
lashtest = "lashtest.cli.main:cli"
